<resources>
    //untranslatable strings
    <string name="loremipsum_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="not_implemented" translatable="false">NOT_IMPLEMENTED</string>
    <string name="ok" translatable="false">OK</string>

    <string name="app_name">MÖKApp</string>
    <string name="action_settings">Beállítások</string>
    <string name="project_list">Projektek</string>
    <string name="project_name">Projektnév</string>
    <string name="project_description">Projektleírás</string>
    <string name="name">Név</string>
    <string name="description">Leírás</string>
    <string name="navigation_drawer_open">Navigációs menü nyitás</string>
    <string name="navigation_drawer_close">Navigációs menü zárás</string>
    <string name="new_project">Új Projekt</string>
    <string name="choose_icon">Ikon kiválasztása</string>
    <string name="create">Létrehozás</string>
    <string name="unsaved_changes">Az adatok nincsenek elmentve. Folytatnád a szerkesztést?</string>
    <string name="edit">Szerkesztés</string>
    <string name="discard">Elvetés</string>
    <string name="project_name_is_required">Állíts be nevet a Projektnek!</string>
    <string name="project_description_is_required">Állíts be leírást a Projektnek!</string>
    <string name="error_occurred">Hiba lépett fel.</string>

    <string name="newest_comment_text">%s %s: %s</string>
    <string name="newest_comment">Legújabb komment:</string>
    <string name="create_project">A projekt megalkotása!</string>
    <string name="send_comment">Komment küldése</string>
    <string name="comment_edit_text_hint">Írd be, hogy mivel haladtál!</string>
    <string name="choose_category">Válassz kategóriát</string>
    <string name="sender">Feladó</string>
    <string name="project_icon">Projektikon</string>
    <string name="choose_project_leader">Válassz projektvezetőt</string>
    <string name="log_out">Kijelentkezés</string>
    <string name="cancel">Mégsem</string>
    <string name="project_creator">Projekt készítője</string>
    <string name="deadline">Határidő</string>
    <string name="members">Résztvevők</string>
    <string name="join">Csatlakozás</string>
    <string name="leave">Lecsatlakozás</string>
    <string name="profile">Profil</string>
    <string name="my_badges">Mancsaim</string>
    <string name="category">Kategória</string>
    <string name="no_completed_projects_text">A kategóriában még nincs teljesített projekt :(</string>
    <string name="mandatory">Kötelező</string>
    <string name="modify">Módosítás</string>
    <string name="my_categories">Munkacsoportjaim:</string>
    <string name="plus_sign">Plus sign</string>
    <string name="user_data_load_failed">Nem sikerült betölteni a felhasználó adatait!</string>
    <string name="filter_completed_projects">Teljesített projektek</string>
    <string name="filter_mandatory_projects">Kötelező projektek</string>
    <string name="filter_joined_projects">Jelentkezett projektek</string>
    <string name="filter_string">Szöveg</string>
    <string name="filter_edited_projects">Kezelt projektek</string>
    <string name="edit_project">Projekt szerkesztése</string>
    <string name="edit_text">Szerkesztés</string>
    <string name="placeholder_email_address">example@mail.com</string>
    <string name="it_terulet">IT</string>
    <string name="ped_terulet">Pedagógia</string>
    <string name="feladatsor_terulet">Feladatsor</string>
    <string name="kreativ_terulet">Kreatív</string>
    <string name="grafika_terulet">Grafika</string>
    <string name="admin">Admin</string>
    <string name="misc">Egyéb</string>
    <string name="phonebook">Telefonkönyv</string>
    <string name="logout">Kijelentkezés</string>
    <string name="no_phone_number">Nincs elérhető telefonszám</string>
    <string name="profile_pic">Profilkép</string>
    <string name="links">Linkek</string>
    <string name="under_construction_project_icon"><![CDATA[https://firebasestorage.googleapis.com/v0/b/mokapp–51f86.appspot.com/o/under_construction_badge.png?alt=media&token=3341868d–5aa8-4f1b-a8b6-f36f24317fef]]></string>
    <string name="close">Bezárás</string>
    <string name="filters">Filterek</string>
    <string name="try_another_filter">Próbáld meg más szűrőfeltételekkel</string>
    <string name="no_match">Nincs találat…</string>
    <string name="share">Megosztás</string>
    <string name="link_name">Link neve</string>
    <string name="value">Érték</string>
    <string name="rewards">Jutalmak</string>
    <string name="request">Kérem!</string>
    <string name="achieved">Megszerezve</string>
    <string name="my_badges_count">Mancsaim: %1$d</string>
    <string name="my_spent_badges_count">Elköltött: %1$d</string>
    <string name="icon_of_project_description">projekt ikonja</string>
    <string name="icon_of_loading_project">projekt ikonja (betöltés)</string>
    <string name="image_of_comment_author_description">a komment írójának képe</string>
    <string name="link_icon">link ikon</string>
    <string name="member_icon">tag ikonja</string>
    <string name="refresh">frissítés</string>
    <string name="mutual_projects">Közös Projektjeitek:</string>
    <string name="project_count">%1$s: %2$d</string>
    <string name="specific_category">Kategória: %1$s</string>
    <string name="specific_value">Érték: %1$d</string>
    <string name="extra_members">+%1$d</string>
    <string name="completed_description">Teljesítette</string>
    <string name="terulet_name">Kreatív/Feladatsor/Pedagógia/stb</string>
    <string name="universal">Univerzális</string>
    <string name="choose_terulet">Terület</string>
    <string name="about">Az appról</string>
    <string name="about_description">A MÖK Egyesület hivatalos belsős alkalmazása. Készítette: az IT Munkacsoport</string>
    <string name="bug_report">Hibabejelentés</string>
    <string name="projectName">%1$s (%2$s)</string>
    <string name="no_notifications">Oké, nem fogunk értesítéseket küldeni :/</string>
    <string name="participant">Résztvevő</string>
    <string name="badge_reward">Mancs jutalom</string>
    <string name="add_description">Hozzáadás</string>
    <string name="add_participants">Résztvevők felvétele</string>
    <string name="modify_participants">Résztvevők felvétele vagy törlése</string>
    <string name="add">Hozzáadás</string>
    <string name="no_results">A keresésre egyetlen eredmény sem található</string>
    <string name="collectedBadgesSummary">Megszerzett mancsok: %1$d</string>
    <string name="collectedProjectsSummary">Ennyi projektből: %1$d</string>
    <string name="badge_value">Mancsérték</string>
    <string name="value_at_least_one">A projektnek legalább egy mancsot kell érnie!</string>
    <string name="achievements">Acsik</string>
    <string name="join_project">Csatlakozás egy projekthez</string>
    <string name="yes">Igen</string>
    <string name="leave_project">Projekt elhagyása</string>
    <string name="leave_project_message">Biztos, hogy el akarod hagyni a projektet? Ezzel elveszted minden mancsodat, amit szereztél benne!</string>
    <string name="join_project_message">Biztos, hogy csatlakozni akarsz a %s nevű projekthez?</string>
    <string name="quantity">%d db</string>
    <string name="send_notifications">Értesítésküldés</string>
    <string name="notification_confirmation">Biztos, hogy el akarod küldeni az értesítést %d embernek?</string>
    <string name="comment_with_sender">%1$s: %2$s</string>
    <string name="administration">Adminisztráció</string>
    <string name="handle_rewards">Jutalmak kezelése</string>
    <string name="request_reward_contentdescription">Request reward</string>
    <string name="back">Vissza</string>
    <string name="project_details">Projekt adatai</string>
    <string name="comments">Kommentek</string>
    <string name="all_projects">Az összes projekt</string>
    <string name="login">Bejelentkezés</string>
    <string name="my_own_badges">Saját Mancsaim</string>
    <string name="details">Adatok</string>
    <string name="achievement_missing_description">Az acsi leírása nem elérhető, Kérlek próbáld újra később.</string>
    <string name="delete">törlés</string>
    <string name="tasks">Feladataim</string>


</resources>