<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/myBadgesFragment"
            android:icon="@drawable/paw_solid"
            android:title="@string/my_badges" />
        <item
            android:id="@+id/achievementsFragment"
            android:icon="@drawable/ic_trophy"
            android:title="@string/achievements" />
        <item
            android:id="@+id/rewardsFragment"
            android:icon="@drawable/ic_star"
            android:title="@string/rewards" />
        <item
            android:id="@+id/adminFragment"
            android:icon="@drawable/ic_admin"
            android:title="@string/admin"
            android:visible="false"
            tools:visible="true" />
    </group>

    <item android:title="@string/misc">
        <menu>
            <item
                android:id="@+id/phoneBookFragment"
                android:icon="@drawable/ic_baseline_phone_24"
                android:title="@string/phonebook" />
            <item
                android:id="@+id/linksFragment"
                android:icon="@drawable/ic_link"
                android:title="@string/links" />
            <item
                android:id="@+id/aboutFragment"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>